--- a/app/src/main/res/drawable/bg_side_nav_bar.xml
+++ b/app/src/main/res/drawable/bg_side_nav_bar.xml
@@ -1,9 +1,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
     <gradient
-        android:startColor="#81C784"
-        android:centerColor="#4CAF50"
-        android:endColor="#2E7D32"
+        android:startColor="#FFD54F"
+        android:centerColor="#FFC107"
+        android:endColor="#FF8F00"
         android:type="linear"
         android:angle="135"/>
 </shape>
