--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,4 +10,13 @@
         android:id="@+id/loginButton"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
+
+    <WebView
+        android:id="@+id/webview"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </WebView>
 </RelativeLayout>
