--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -2,17 +2,19 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <group android:checkableBehavior="single">
-        <item android:id="@+id/nav_collection" android:icon="@android:drawable/ic_menu_agenda"
+        <item android:id="@+id/nav_profile" android:icon="@mipmap/ic_account"
+            android:title="Profile"/>
+        <item android:id="@+id/nav_collection" android:icon="@mipmap/ic_package_variant"
             android:title="Collection" />
-        <item android:id="@+id/nav_wantlist" android:icon="@android:drawable/ic_menu_add"
+        <item android:id="@+id/nav_wantlist" android:icon="@mipmap/ic_heart"
             android:title="Wantlist" />
-        <item android:id="@+id/nav_settings" android:icon="@android:drawable/ic_menu_manage"
+        <item android:id="@+id/nav_settings" android:icon="@mipmap/ic_wrench"
             android:title="Settings" />
     </group>
 
     <item android:title="Communicate">
         <menu>
-            <item android:id="@+id/nav_contact" android:icon="@android:drawable/ic_menu_send"
+            <item android:id="@+id/nav_contact" android:icon="@mipmap/ic_email"
                 android:title="Contact Us" />
         </menu>
     </item>
