--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,8 +1,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
-    <item android:id="@+id/action_search" android:icon="@mipmap/ic_magnify"
-        android:title="Search" android:orderInCategory="100" app:showAsAction="ifRoom" />
+
+    <item android:id="@+id/action_search"
+        android:orderInCategory="5"
+        android:title="Search"
+        android:icon="@mipmap/ic_magnify"
+        app:showAsAction="ifRoom|collapseActionView"
+        app:actionViewClass="android.support.v7.widget.SearchView" />
+
     <item android:id="@+id/action_barcode" android:icon="@mipmap/ic_barcode"
         android:title="Barcode Scanner" android:orderInCategory="1000" app:showAsAction="ifRoom" />
 </menu>
