cards... CARDS EVERYWHERE

--- a/app/src/main/res/layout/activity_barcode_scanner.xml
+++ b/app/src/main/res/layout/activity_barcode_scanner.xml
@@ -8,6 +8,7 @@
 
     <com.adamdonegan.cogs.util.CameraSourcePreview
         android:id="@+id/preview"
+        android:background="@color/transparent"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
