--- a/app/src/main/res/layout/card_list_item.xml
+++ b/app/src/main/res/layout/card_list_item.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/card_view"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/card_height"
+    android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:layout_marginBottom="@dimen/md_keylines_half"
     android:layout_marginLeft="@dimen/md_keylines"
@@ -16,35 +16,37 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/card_image"
-            android:layout_width="72dp"
-            android:layout_height="72dp"
-            android:layout_marginLeft="@dimen/md_keylines_half"
+        <TextView
+            android:id="@+id/text1"
+            android:layout_width="32dp"
+            android:layout_height="wrap_content"
+            android:text="ABC"
             android:layout_marginTop="@dimen/md_keylines_half"
+            android:layout_marginLeft="@dimen/md_keylines_half"
             android:layout_marginBottom="@dimen/md_keylines_half"
-            android:layout_marginRight="@dimen/md_keylines_half"
-            android:scaleType="centerCrop"/>
+            android:textColor="@color/text_secondary"
+            android:textSize="@dimen/article_subheading" />
 
         <TextView
-            android:id="@+id/card_title"
-            android:layout_width="match_parent"
+            android:id="@+id/text2"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/card_image"
-            android:layout_toRightOf="@+id/card_image"
-            android:text="Card Title"
-            android:textColor="@color/text_primary"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
-
-        <TextView
-            android:id="@+id/card_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/card_title"
-            android:layout_toRightOf="@+id/card_image"
-            android:text="Card description"
-            android:ellipsize="end"
+            android:layout_toEndOf="@id/text1"
+            android:layout_alignBottom="@id/text1"
+            android:layout_marginLeft="@dimen/md_keylines_half"
+            android:text="Description"
             android:singleLine="true"
+            android:textColor="@color/text_primary"
+            android:textSize="@dimen/article_subheading" />
+
+        <TextView
+            android:id="@+id/text3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="@dimen/md_keylines_half"
+            android:layout_alignBottom="@id/text1"
+            android:layout_alignParentEnd="true"
+            android:text="Description"
             android:textColor="@color/text_secondary"
             android:textSize="@dimen/article_subheading" />
     </RelativeLayout>
