--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#009688</color>
-    <color name="colorPrimaryDark">#00796B</color>
+    <color name="colorPrimary">#9E9E9E</color>
+    <color name="colorPrimaryDark">#616161</color>
     <color name="colorAccent">#FFD740</color>
 
     <color name="black">#000000</color>
@@ -10,4 +10,7 @@
     <color name="text_secondary">#8A000000</color>
     <color name="button_grey">#757575</color>
     <color name="divider">#1E000000</color>
+
+    <color name="transparent">#00FFFFFF</color>
+    <color name="status_transparent">#1E000000</color>
 </resources>
