--- a/app/src/main/res/layout/card_empty.xml
+++ b/app/src/main/res/layout/card_empty.xml
@@ -10,12 +10,13 @@
     android:foreground="?android:attr/selectableItemBackground"
     android:clickable="true"
     android:focusable="true"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+    android:theme="@style/AppTheme">
 
     <LinearLayout
         android:id="@+id/linear_layout_list"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme">
     </LinearLayout>
 </android.support.v7.widget.CardView>
