--- a/app/src/main/res/layout/card_list_item.xml
+++ b/app/src/main/res/layout/card_list_item.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/card_view"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="@dimen/card_list_height"
     android:layout_gravity="center"
     android:layout_marginBottom="@dimen/md_keylines_half"
     android:layout_marginLeft="@dimen/md_keylines"
@@ -10,44 +10,73 @@
     android:foreground="?android:attr/selectableItemBackground"
     android:clickable="true"
     android:focusable="true"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+    android:theme="@style/AppTheme">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/text1"
-            android:layout_width="32dp"
-            android:layout_height="wrap_content"
-            android:text="ABC"
+        <ImageView
+            android:id="@+id/card_image"
+            android:layout_width="72dp"
+            android:layout_height="72dp"
+            android:layout_marginLeft="@dimen/md_keylines_half"
             android:layout_marginTop="@dimen/md_keylines_half"
-            android:layout_marginLeft="@dimen/md_keylines_half"
             android:layout_marginBottom="@dimen/md_keylines_half"
-            android:textColor="@color/text_secondary"
-            android:textSize="@dimen/article_subheading" />
-
-        <TextView
-            android:id="@+id/text2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toEndOf="@id/text1"
-            android:layout_alignBottom="@id/text1"
-            android:layout_marginLeft="@dimen/md_keylines_half"
-            android:text="Description"
-            android:singleLine="true"
-            android:textColor="@color/text_primary"
-            android:textSize="@dimen/article_subheading" />
-
-        <TextView
-            android:id="@+id/text3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_marginRight="@dimen/md_keylines_half"
-            android:layout_alignBottom="@id/text1"
+            android:scaleType="centerCrop"/>
+
+        <TextView
+            android:id="@+id/card_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/card_image"
+            android:layout_marginTop="@dimen/md_keylines_half"
+            android:text="Card Title"
+            android:textColor="@color/text_primary"
+            android:textSize="@dimen/text_title" />
+
+        <Button
+            android:id="@+id/button1"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginTop="@dimen/md_keylines_half"
+            android:layout_marginRight="@dimen/md_keylines_half"
             android:layout_alignParentEnd="true"
-            android:text="Description"
+            android:background="@android:drawable/ic_menu_delete"
+            android:visibility="gone"/>
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_alignLeft="@+id/button1"
+            android:layout_below="@+id/button1"
+            android:background="@mipmap/ic_heart"
+            android:visibility="gone"/>
+
+        <TextView
+            android:id="@+id/card_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/card_title"
+            android:layout_toRightOf="@+id/card_image"
+            android:text="Card description"
+            android:ellipsize="end"
+            android:singleLine="true"
             android:textColor="@color/text_secondary"
-            android:textSize="@dimen/article_subheading" />
+            android:textSize="@dimen/text_body" />
+
+        <TextView
+            android:id="@+id/card_text_secondary"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/card_text"
+            android:layout_toRightOf="@+id/card_image"
+            android:text="Card secondary"
+            android:singleLine="true"
+            android:textColor="@color/text_secondary"
+            android:textSize="@dimen/text_body"
+            />
     </RelativeLayout>
 </android.support.v7.widget.CardView>
